--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -234,6 +234,7 @@
 /extensions/open-in-json-hero                        @ericallam
 /extensions/open-with-app                            @fturcheti
 /extensions/opsgenie                                 @ricoberger
+/extensions/parabol                                  @BartoszJarocki @BartoszJarocki
 /extensions/parcel-tracker                           @jjhok
 /extensions/parrot-translate                         @Haojen
 /extensions/party-parrot                             @thomaspaulmann
