--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -86,6 +86,7 @@
 /extensions/dex-screener                             @wp-lai
 /extensions/dict-cc                                  @natterstefan
 /extensions/diff-checker                             @Destiner
+/extensions/dig                                      @danielbahl @pernielsentikaer
 /extensions/discord                                  @Aayush9029
 /extensions/displayplacer                            @eluce2
 /extensions/dock                                     @pradeepb28
