--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -234,6 +234,7 @@
 /extensions/ones                                     @k8scat
 /extensions/open-in-json-hero                        @ericallam
 /extensions/open-with-app                            @fturcheti
+/extensions/openweathermap                           @tonka3000
 /extensions/opsgenie                                 @ricoberger
 /extensions/parabol                                  @BartoszJarocki @BartoszJarocki
 /extensions/parcel-tracker                           @jjhok
