Fix: cannot open following channel when user_name != user_login (#1636)

--- a/extensions/twitch/package.json
+++ b/extensions/twitch/package.json
@@ -7,7 +7,8 @@
   "author": "dieserRobin",
   "contributors": [
     "suth",
-    "pernielsentikaer"
+    "pernielsentikaer",
+    "MiracleXYZ"
   ],
   "license": "MIT",
   "preferences": [
