--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -347,7 +347,7 @@
 /extensions/tunnelblick                              @SamuelNitsche
 /extensions/tuple                                    @inxilpro
 /extensions/tw-colorsearch                           @magicjaqk
-/extensions/twitch                                   @dieserRobin @suth @pernielsentikaer
+/extensions/twitch                                   @dieserRobin @suth @pernielsentikaer @MiracleXYZ
 /extensions/twitter                                  @tonka3000
 /extensions/twitter-trendscast                       @pradeepb28
 /extensions/two-factor-authentication-code-generator @cjdenio
