--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -306,6 +306,7 @@
 /extensions/sentry                                   @thomaspaulmann @mattisssa
 /extensions/sf-symbols-search                        @peteschaffner
 /extensions/shopify-developer-changelog              @sandypockets
+/extensions/signal                                   @leeraymond78
 /extensions/simpread                                 @Kenshin
 /extensions/single-disk-eject                        @johndturn
 /extensions/sketch                                   @aesign
