[Google Drive] Faster indexing with progress (#1613)
* Show indexing progress

* Show indexing progress

* Update changelog.md

* Fix

* Replaced external binary `fd` with `fast-glob`

* Update `throttledUpdateToastMessage` with optional parameters

* Move toast update interval to constants.ts

* Run `initialSetup` synchronously

* Update file stream with ignore preferences

* Remove unknown casting

* Fix directories not showing up

* Update `fileStream` function name

* Remove globbing for exclude paths

* Better readability of driveFileStream options

* Fix ignore paths

* Use SQL parameters

* Remove logging of exclude paths

* Fix creation time

* Use birthtime instead of access time

* Don't index system folders and files

* Improve file preview details performance

* Update Raycast API for accessories

* Only fetch markdown if detail is showing

* Fix favourites not showing details

* Fix favourites not showing detail

* Fix default ignores

Co-authored-by: Daniel Stone <me@danstone.uk>

--- a/extensions/google-drive/package.json
+++ b/extensions/google-drive/package.json
@@ -9,7 +9,10 @@
     "Developer Tools",
     "Productivity"
   ],
-  "contributors": ["nametake"],
+  "contributors": [
+    "nametake",
+    "daniel-stoneuk"
+  ],
   "license": "MIT",
   "commands": [
     {
@@ -57,12 +60,13 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.33.2",
+    "@raycast/api": "^1.34.0",
+    "fast-glob": "^3.2.11",
     "fzf": "^0.5.1",
     "sql.js": "^1.6.2"
   },
   "devDependencies": {
-    "@types/node": "~16.10.0",
+    "@types/node": "^16.11.0",
     "@types/react": "^17.0.28",
     "@types/sql.js": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
