feat(amazon-aws): add list dynamodb tables command (#1606)
* feat(amazon-aws): add list dynamodb tables command

* Update package.json

* Added changelog

Co-authored-by: momme.rtf <>
Co-authored-by: Per Nielsen Tikær <per@raycast.com>

--- a/extensions/amazon-aws/package.json
+++ b/extensions/amazon-aws/package.json
@@ -8,7 +8,8 @@
   "contributors": [
     "Hodglim",
     "JonathanWbn",
-    "gebeto"
+    "gebeto",
+    "mommertf"
   ],
   "categories": [
     "Developer Tools",
@@ -49,6 +50,13 @@
       "title": "CloudFormation Stacks",
       "subtitle": "Amazon AWS",
       "description": "List All your CloudFormation Stacks",
+      "mode": "view"
+    },
+    {
+      "name": "dynamodb",
+      "title": "DynamoDB Tables",
+      "subtitle": "Amazon AWS",
+      "description": "List All your DynamoDB Tables",
       "mode": "view"
     }
   ],
