--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -341,6 +341,7 @@
 /extensions/todo-list                                @maggie-j-liu
 /extensions/todoist                                  @thomaslombart
 /extensions/toggl-track                              @franzwilhelm
+/extensions/toggle-desktop-visibility                @Haojen
 /extensions/toolbox                                  @kkange
 /extensions/toothpick                                @briankosw
 /extensions/tower                                    @tdwesten
