--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -113,6 +113,7 @@
 /extensions/everhour                                 @farisaziz12
 /extensions/f1-standings                             @csigritz @sxn @qeude
 /extensions/facetime                                 @ron-myers
+/extensions/fibonacci-sequence                       @adambutler
 /extensions/figma-files                              @michaelwschultz
 /extensions/file-manager                             @es183923
 /extensions/finnish-dictionary                       @albertoxamin
