--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -58,6 +58,7 @@
 /extensions/coinbase-pro                             @farisaziz12
 /extensions/coingecko                                @Destiner @mike182uk
 /extensions/coinmarketcap-crypto-crawler             @moojing
+/extensions/coinpaprika                              @gumbleliks
 /extensions/color-casket                             @slavarazum
 /extensions/commitlint                               @lardissone
 /extensions/common-directory                         @koinzhang
