--- a/extensions/visual-studio-code-recent-projects/package.json
+++ b/extensions/visual-studio-code-recent-projects/package.json
@@ -6,7 +6,9 @@
   "icon": "icon.png",
   "author": "thomas",
   "contributors": [
-    "iainsimmons"
+    "iainsimmons",
+    "macbookandrew",
+    "cy-98"
   ],
   "license": "MIT",
   "commands": [
