--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -267,6 +267,7 @@
 /extensions/premier-league                           @anhthang
 /extensions/productboard                             @honzatmn
 /extensions/producthunt                              @ragnorc
+/extensions/projects                                 @ajaypremshankar
 /extensions/px-to-rem-converter                      @raulanatol
 /extensions/qq-music-controls                        @jwickers
 /extensions/qr-code-scanner                          @StevenRCE0
