--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -368,6 +368,7 @@
 /extensions/ulysses                                  @praveenjuge
 /extensions/unicode-symbols                          @mmazzarolo @FezVrasta
 /extensions/unix-timestamp                           @Destiner
+/extensions/unogs                                    @mohitkyadav
 /extensions/unsplash                                 @eggsy
 /extensions/url-tools                                @joshauh46
 /extensions/uuid-generator                           @jmaeso
