--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -242,6 +242,7 @@
 /extensions/office-quotes                            @braydoncoyer @sandypockets
 /extensions/ones                                     @k8scat
 /extensions/open-in-json-hero                        @ericallam
+/extensions/open-path                                @koinzhang
 /extensions/open-with-app                            @fturcheti
 /extensions/openweathermap                           @tonka3000
 /extensions/opsgenie                                 @ricoberger
