--- a/extensions/projects/package.json
+++ b/extensions/projects/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "projects",
   "title": "Projects",
-  "description": "Quickly access your local projects and open them in your favorite editor or any app. Supports maven, gradle, and node projects.",
+  "description": "Quickly access your local projects and open them in your favorite editor or any app.",
   "icon": "coding-folder.png",
   "author": "ajaypremshankar",
   "license": "MIT",
@@ -11,7 +11,7 @@
     {
       "name": "projects",
       "title": "Projects",
-      "description": "Quickly access your local projects and open them in your favorite editor or any app. Supports maven, gradle, and node projects.",
+      "description": "Quickly access your local projects and open them in your favorite editor or any app.",
       "mode": "view"
     }
   ],
@@ -25,58 +25,44 @@
       "description": "Path to scan for proejcts. ~/ is expanded. Use : to seperate multiple paths"
     },
     {
-      "name": "repoScanDepth",
-      "type": "dropdown",
-      "required": true,
-      "title": "Max scan depth",
-      "data": [
-        {
-          "title": "2",
-          "value": "2"
-        },
-        {
-          "title": "3",
-          "value": "3"
-        },
-        {
-          "title": "4",
-          "value": "4"
-        },
-        {
-          "title": "5",
-          "value": "5"
-        },
-        {
-          "title": "6",
-          "value": "6"
-        }
-      ],
-      "description": "Maximnum depth to scan for repos",
-      "default": "3"
+      "name": "scanForProjectTypes",
+      "type": "textfield",
+      "required": false,
+      "default": "node,maven,gradle,xcode",
+      "title": "Type of projects to scan for.",
+      "description": "Type of projects to scan for. Use , to seperate multiple paths. Supported: node,maven,gradle,xcode"
     },
     {
       "name": "openNodeWith",
       "type": "appPicker",
-      "required": true,
+      "required": false,
       "title": "Open NODE projects with (required), shortcut: ⏎",
       "description": "Open NODE projects with",
       "default": "Visual Studio Code"
     },
     {
+      "name": "openXcodeWith",
+      "type": "appPicker",
+      "required": false,
+      "title": "Open XCode projects with (required), shortcut: ⏎",
+      "description": "Open XCode projects with",
+      "default": "Xcode"
+    },
+    {
       "name": "openMavenWith",
       "type": "appPicker",
-      "required": true,
+      "required": false,
       "title": "Open MAVEN projects with (required), shortcut: ⏎",
       "description": "Open MAVEN projects with",
-      "default": "Visual Studio Code"
+      "default": "IntelliJ IDEA CE"
     },
     {
       "name": "openGradleWith",
       "type": "appPicker",
-      "required": true,
+      "required": false,
       "title": "Open GRADLE projects with (required), shortcut: ⏎",
       "description": "Open GRADLE projects with",
-      "default": "Visual Studio Code"
+      "default": "IntelliJ IDEA CE"
     },
     {
       "name": "openWith1",
@@ -84,7 +70,7 @@
       "required": false,
       "title": "Open with (default), shortcut: ⌥⏎",
       "description": "Open with",
-      "default": ""
+      "default": "Visual Studio Code"
     },
     {
       "name": "openWith2",
@@ -108,11 +94,13 @@
     "Productivity"
   ],
   "dependencies": {
-    "@raycast/api": "^1.30.3"
+    "@raycast/api": "^1.30.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^16.10.0",
     "@types/react": "^17.0.15",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.31.0",
