--- a/extensions/text-shortcuts/package.json
+++ b/extensions/text-shortcuts/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "text-shortcuts",
   "title": "Text Shortcuts",
-  "description": "Use Text Shortcuts to handle text from the selection or clipboard.",
+  "description": "Use Text Shortcuts to handle text from the selection or clipboard",
   "icon": "extension-icon.png",
   "author": "koinzhang",
   "categories": [
