--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -356,6 +356,7 @@
 /extensions/toothpick                                @briankosw
 /extensions/tower                                    @tdwesten
 /extensions/transmission                             @FezVrasta
+/extensions/transmit                                 @kennonb
 /extensions/trello                                   @ChrisChinchilla
 /extensions/tunnelblick                              @SamuelNitsche
 /extensions/tuple                                    @inxilpro
