--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -138,7 +138,7 @@
 /extensions/github-stars                             @mrmartineau
 /extensions/github-status                            @FezVrasta
 /extensions/gitignore                                @daniel-stoneuk
-/extensions/gitlab                                   @tonka3000 @Loskir @immint023
+/extensions/gitlab                                   @tonka3000 @Loskir @immint023 @duboiss
 /extensions/gitmoji                                  @ricoberger
 /extensions/go-package-search                        @bstncartwright
 /extensions/google-books                             @Ali-Parandeh
