--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -333,6 +333,7 @@
 /extensions/spotify-player                           @mattisssa @dillionverma
 /extensions/ssh-manager                              @scopsy
 /extensions/stackoverflow                            @sadanand-singh
+/extensions/stock-lookup                             @jones-sam
 /extensions/stripe                                   @pradeepb28
 /extensions/supabase-docs                            @Isaiah-Hamilton
 /extensions/surge                                    @ysj151215
