--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -303,6 +303,7 @@
 /extensions/ricescore                                @tonka3000
 /extensions/roblox-games                             @TayIorRobinson
 /extensions/rss-reader                               @fuksman
+/extensions/rsync-commands                           @maxfahl
 /extensions/sabnzbd                                  @jesse-c
 /extensions/safari                                   @loris @thomaspaulmann
 /extensions/script-commands                          @unnamedd
