--- a/extensions/rsync-commands/package.json
+++ b/extensions/rsync-commands/package.json
@@ -29,7 +29,7 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.33.2",
+    "@raycast/api": "^1.35.1",
     "sugar": "^2.0.6",
     "uuid": "^8.3.2",
     "zustand": "^3.6.0"
@@ -44,6 +44,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "prettier": "^2.5.1",
+    "react-devtools": "^4.21.0",
     "typescript": "^4.4.3"
   },
   "scripts": {
