--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -338,6 +338,7 @@
 /extensions/stripe                                   @pradeepb28
 /extensions/supabase-docs                            @Isaiah-Hamilton
 /extensions/surge                                    @ysj151215
+/extensions/svgr                                     @rickMcGavin
 /extensions/swift-evolution                          @BProg
 /extensions/switchhosts                              @tiancheng92
 /extensions/system-monitor                           @hossammourad
