--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -215,7 +215,7 @@
 /extensions/linux-command                            @jaywcjlove
 /extensions/liveblocks                               @andreaselia
 /extensions/lobsters                                 @dev99problems
-/extensions/logseq                                   @futantan
+/extensions/logseq                                   @futantan @futantan
 /extensions/lorem-ipsum                              @AntonNiklasson
 /extensions/macupdater                               @karlsander
 /extensions/markdown-reference                       @codedbyjordan
