--- a/extensions/open-path/package.json
+++ b/extensions/open-path/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "open-path",
   "title": "Open Path",
-  "description": "Open path or URL from selection or clipboard.\nIf no path or URL is detected, the text will be searched in the browser.",
+  "description": "Open path from selection or clipboard.\nSupport directory, URL, IP address, URL scheme, mailto, email address.",
   "icon": "open-path.png",
   "author": "koinzhang",
   "categories": [
@@ -15,16 +15,33 @@
     {
       "name": "open-path",
       "title": "Open Path",
-      "description": "Open path or URL from selection or clipboard.\nIf no path or URL is detected, the text will be searched in the browser.",
+      "description": "Open path from selection or clipboard.\nSupport directory, URL, IP address, URL scheme, mailto, email address.",
       "mode": "no-view"
     }
   ],
   "preferences": [
     {
+      "name": "trimText",
+      "type": "checkbox",
+      "description": "Automatically remove spaces at both ends of text.",
+      "required": false,
+      "title": "Advanced Preferences",
+      "default": true,
+      "label": "Trim Text"
+    },
+    {
+      "name": "isShowHud",
+      "type": "checkbox",
+      "description": "After open the path, display the HUD pop-up prompt.",
+      "required": false,
+      "default": true,
+      "label": "Show HUD"
+    },
+    {
       "name": "priorityDetection",
       "type": "dropdown",
       "required": false,
-      "title": "Priority detection",
+      "title": "Priority Detection",
       "description": "Priority detection of selected text or clipboard.",
       "default": "selected",
       "data": [
@@ -70,7 +87,7 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.34.1",
+    "@raycast/api": "^1.35.1",
     "fs-extra": "^10.1.0"
   },
   "devDependencies": {
