--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -331,7 +331,7 @@
 /extensions/sourcegraph                              @bobheadxi
 /extensions/spatie-documentation                     @danyelkeddah
 /extensions/speedtest                                @tonka3000
-/extensions/spotify-controls                         @thomaspaulmann @altrdev @ron-myers @sandypockets
+/extensions/spotify-controls                         @thomaspaulmann @altrdev @ron-myers @sandypockets @Kenan7
 /extensions/spotify-player                           @mattisssa @dillionverma
 /extensions/ssh-manager                              @scopsy
 /extensions/stackoverflow                            @sadanand-singh
