--- a/extensions/spotify-player/package.json
+++ b/extensions/spotify-player/package.json
@@ -6,7 +6,8 @@
   "icon": "icon.png",
   "author": "mattisssa",
   "contributors": [
-    "dillionverma"
+    "dillionverma",
+    "andreaselia"
   ],
   "license": "MIT",
   "commands": [
@@ -63,12 +64,15 @@
     "eslint-config-prettier": "^8.3.0",
     "js-base64": "^3.6.1",
     "open": "^8.2.1",
+    "prettier": "^2.6.2",
     "react-devtools": "^4.19.2",
     "spotify-web-api-node": "^5.0.2",
     "typescript": "^4.4.3"
   },
   "scripts": {
     "build": "ray build -e dist",
-    "dev": "ray develop"
+    "dev": "ray develop",
+    "fix-lint": "ray lint --fix",
+    "lint": "ray lint"
   }
 }
