--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -332,7 +332,7 @@
 /extensions/spatie-documentation                     @danyelkeddah
 /extensions/speedtest                                @tonka3000
 /extensions/spotify-controls                         @thomaspaulmann @altrdev @ron-myers @sandypockets @Kenan7
-/extensions/spotify-player                           @mattisssa @dillionverma
+/extensions/spotify-player                           @mattisssa @dillionverma @andreaselia
 /extensions/ssh-manager                              @scopsy
 /extensions/stackoverflow                            @sadanand-singh
 /extensions/stock-lookup                             @jones-sam
