--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -321,6 +321,7 @@
 /extensions/sf-symbols-search                        @peteschaffner
 /extensions/shopify-developer-changelog              @sandypockets
 /extensions/signal                                   @leeraymond78
+/extensions/simple-youdao                            @xeric
 /extensions/simpread                                 @Kenshin
 /extensions/single-disk-eject                        @johndturn
 /extensions/sketch                                   @aesign
