--- a/extensions/visual-studio-code-recent-projects/package.json
+++ b/extensions/visual-studio-code-recent-projects/package.json
@@ -8,7 +8,8 @@
   "contributors": [
     "iainsimmons",
     "macbookandrew",
-    "cy-98"
+    "cy-98",
+    "pernielsentikaer"
   ],
   "license": "MIT",
   "commands": [
