--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -402,6 +402,7 @@
 /extensions/wrike                                    @suarez-agu
 /extensions/xcode                                    @SvenTiigi @qeude
 /extensions/xkcd                                     @maggie-j-liu
+/extensions/yandex-music                             @AlexStrNik
 /extensions/youdao-translate                         @tiancheng92
 /extensions/youtube                                  @tonka3000
 /extensions/youtube-companion                        @sasivarnan
