--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -350,6 +350,7 @@
 /extensions/tableplus                                @pernielsentikaer
 /extensions/tailscale                                @samlinville
 /extensions/tailwindcss                              @vimtor
+/extensions/tapo-smart-devices                       @timrogers
 /extensions/temporary-email                          @natterstefan
 /extensions/terminalfinder                           @yedongze
 /extensions/text-shortcuts                           @koinzhang
