--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -234,6 +234,7 @@
 /extensions/must                                     @eggsy
 /extensions/myip                                     @kkange
 /extensions/nativebase-docs                          @ShubhamVerma1811
+/extensions/nba-game-viewer                          @AbhinavPalacharla
 /extensions/netease-music                            @chyroc
 /extensions/netlify                                  @Destiner
 /extensions/nextcloud                                @uetchy
