NBA: Update subtitles

--- a/extensions/nba-game-viewer/package.json
+++ b/extensions/nba-game-viewer/package.json
@@ -13,12 +13,14 @@
     {
       "name": "upcoming-games",
       "title": "View Upcoming Games",
+      "subtitle": "NBA",
       "description": "Fetches upcoming NBA games",
       "mode": "view"
     },
     {
       "name": "standings",
       "title": "View Standings",
+      "subtitle": "NBA",
       "description": "Fetches NBA standings",
       "mode": "view"
     }
