--- a/extensions/craftdocs/package.json
+++ b/extensions/craftdocs/package.json
@@ -5,6 +5,9 @@
   "description": "Search documents in Craft",
   "icon": "command-icon.png",
   "author": "bgnfu7re",
+  "contributors": [
+    "mafredri"
+  ],
   "license": "MIT",
   "categories": [
     "Productivity"
